# aoc2024

./: .gitignore  AoCHelpers.py  README.md  aoc-helpers  aoc_helpers  d1.py  d10.py  d11.py  d2.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8.py  d9.py  day1.py  helpers  pyproject.toml  template test.py  template.py  tester.py  y2015d19.py  y2019d10.py
